small css changes so position relative not broken, little code cleanup

--- a/src/components/todolist/TodoList.scss
+++ b/src/components/todolist/TodoList.scss
@@ -10,16 +10,16 @@
     text-align: left;
     margin: 0 auto 10px auto;
   }
-
-  span {
+  
+  .icon {
     position: absolute;
     right: 10px;
   }
-
+  
   .checkbox {
     right: 50px;
   }
-
+  
   input {
     border: none;
   }
